--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.20",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
     "react": "^18.2.0",
