--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
